swagger and small auth logic change
